EOD commit. Lives enum is set up

--- a/Assignment1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Assignment1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ Advanced=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldPartitionRuntimeSpatialHash=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
@@ -220,17 +220,25 @@ TextBlock="\"Object\" "
 TextLayoutWidget="\"Object\" "
 WidgetMenu_C="\"Object\" "
 UserWidget="\"Object\" "
+UserDefinedEnum="\"Object\" "
+Enum="\"Object\" "
+Field="\"Object\" "
+PlayerWidget_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/WidgetMenu.WidgetMenu
+OpenAssetsAtExit=/Game/Blueprints/PlayerWidget.PlayerWidget
+OpenAssetsAtExit=/Game/Blueprints/MyCustomGameMode.MyCustomGameMode
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/PlayerWidget
-MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem2=/Game/Blueprints/MainMenu
-MRUItem3=/Game/Blueprints/BP_Widget
-MRUItem4=/Game/Blueprints/WidgetMenu
-MRUItem5=/Game/Blueprints/MyCustomGameMode
+MRUItem0=/Game/Blueprints/MyCustomGameMode
+MRUItem1=/Game/Blueprints/LivesAvailable
+MRUItem2=/Game/Blueprints/PlayerWidget
+MRUItem3=/Game/Blueprints/WidgetMenu
+MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem5=/Game/Blueprints/MainMenu
+MRUItem6=/Game/Blueprints/BP_Widget
 
 [DetailCategories]
 MyCustomGameMode_C.Tick=True
@@ -335,6 +343,26 @@ TextBlock.Navigation=True
 TextBlock.Localization=True
 PropertyWrapper.Events=True
 WorldSettings.HLODSystem=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
+MyCustomGameMode_C.Default=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+PlayerWidget_C.Appearance=True
+PlayerWidget_C.Designer=True
+PlayerWidget_C.Input=True
+PlayerWidget_C.Interaction=True
+PlayerWidget_C.Performance=True
+PlayerWidget_C.Layout=True
+PlayerWidget_C.Behavior=True
+PlayerWidget_C.Render Transform=True
+PlayerWidget_C.Localization=True
+PlayerWidget_C.Accessibility=True
+PlayerWidget_C.Clipping=True
+PlayerWidget_C.Navigation=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -454,6 +482,7 @@ GraphEditorQuickJumps=()
 /Game/Blueprints/MyCustomGameMode.MyCustomGameMode=0
 /Game/Blueprints/PlayerWidget.PlayerWidget=0
 /Game/Blueprints/WidgetMenu.WidgetMenu=0
+/Game/Blueprints/LivesAvailable.LivesAvailable=0
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1507,4 +1536,7 @@ SequencerWidgets.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[DetailCategoriesAdvanced]
+TextBlock.Localization=True
 
